--- a/WebAppAsp/Site.Master
+++ b/WebAppAsp/Site.Master
@@ -69,6 +69,7 @@
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
         <%: Scripts.Render("~/Scripts/articles.js") %>
+        <%: Scripts.Render("~/Scripts/responsive.js") %>
     </asp:PlaceHolder>
 </body>
 </html>
