--- a/WebAppAsp/Site.Master
+++ b/WebAppAsp/Site.Master
@@ -20,7 +20,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
-<body>
+<body class="body">
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -41,18 +41,20 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">E-Gestion</a>
+                <a class="navbar-brand" runat="server" href="~/">
+                    <img src="/Asset/webApp.ico" alt="E-Gestion"/><span>E</span>Gestion
+                </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Activer/désactiver la navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Articles</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Tiers</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
+                        <li class="nav-item active-item" id="articles" onclick="articles()"><a class="nav-link" runat="server" href="~/">Articles</a></li>
+                        <li class="nav-item" id="tiers" onclick="tiers()"><a class="nav-link" runat="server" href="~/About">Tiers</a></li>
+                        <li class="nav-item" id="contact" onclick="contact()"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
