--- a/WebAppAsp/Site.Master
+++ b/WebAppAsp/Site.Master
@@ -53,7 +53,7 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item active-item"><a class="nav-link" runat="server" href="~/">Articles</a></li>
-                        <li class="nav-item" onclick="tiers()"><a class="nav-link" runat="server" href="~/Tiers">Tiers</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Tiers">Tiers</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
                     </ul>
                 </div>
