--- a/WebAppAsp/Site.Master
+++ b/WebAppAsp/Site.Master
@@ -72,6 +72,8 @@
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
         <%: Scripts.Render("~/Scripts/articles.js") %>
         <%: Scripts.Render("~/Scripts/responsive.js") %>
+        <%: Scripts.Render("~/Scripts/navigation.js") %>
+        <%: Scripts.Render("~/Scripts/tiers.js") %>
     </asp:PlaceHolder>
 </body>
 </html>
