--- a/WebAppAsp/Content/Site.css
+++ b/WebAppAsp/Content/Site.css
@@ -21,10 +21,10 @@ body, html{
 
 
 
-nav {
+nav{
     background-color: white;
-    background-attachment: fixed;
     border-bottom: 1px solid #E4ECEC;
+    position:fixed;
 }
 
 nav .container a img {
@@ -66,7 +66,7 @@ textarea {
 }
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
     .body-content {
         padding: 0;
     }
@@ -77,6 +77,13 @@ textarea {
     }
 }
 
+@media screen and (max-width:992px) {
+    h5 span,
+    .menuactive span {
+        font-size: 12px;
+        font-weight: 800;
+    }
+}
 
 ul{
     list-style-type:none;
@@ -118,7 +125,7 @@ ul{
     box-shadow: 4px 4px 4px #E4ECEC;
 }
 
-.col-sm-10 {
+.col-10 {
     background-color: white;
     border: 0.5px solid #E4ECEC;
     border-radius: 5px;
