--- a/WebAppAsp/Content/Site.css
+++ b/WebAppAsp/Content/Site.css
@@ -164,12 +164,12 @@ h5 span {
     color: #66938E;
     font-weight:700;
     font-style:oblique;
+    display:flex;
     justify-content:center;
-    align-items:center;
-    text-align:center;
 }
 
-.form-commande {
+.form-commande,
+.form-contact {
     margin-bottom:20px;
 }
 
